# ai-resume-match

./: .gitignore  README.md
backend/: .env.example  .gitignore  main.py  models.py  parser.py  pyproject.toml  scorer.py
frontend/: package-lock.json  package.json  vercel.json
frontend/public/: index.html
frontend/src/: App.css  App.jsx
